# nerfprobe

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/nerfprobe/: __init__.py  cli.py  runner.py  storage.py
src/nerfprobe/gateways/: __init__.py  anthropic.py  bedrock.py  dashscope.py  google.py  ollama.py  openai_compat.py  zhipu.py
src/nerfprobe/tui/: __init__.py  app.py
tests/: test_e2e_ollama.py  test_gateways.py  test_runner.py  test_storage.py
