[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nerfprobe"
version = "0.2.0"
description = "Scientifically-grounded LLM degradation detection for developers"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
keywords = ["llm", "testing", "probes", "quantization", "degradation", "inference"]
authors = [
    {name = "Stefan Wiest", email = "skew202@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "nerfprobe-core>=0.2.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "textual>=0.70.0",
    "python-crontab>=3.0.0",
    "platformdirs>=4.0.0",
    "jsonschema>=4.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv.sources]
nerfprobe-core = { path = "../nerfprobe-core", editable = true }

[project.scripts]
nerfprobe = "nerfprobe.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "respx>=0.22.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nerfprobe"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "E402", "B008"]  # Allow long lines, test imports, typer.Option pattern

[tool.ruff.lint.per-file-ignores]
"src/nerfprobe/gateways/bedrock.py" = ["F401"]  # Conditional imports

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
